--- a/stilos/estilos.css
+++ b/stilos/estilos.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #722424;
-    height: 100;
+    height: 100%;
     margin: 0;
     padding: 0;
     color: #333;
